--- a/style.css
+++ b/style.css
@@ -120,3 +120,10 @@
 .hide {
     display: none;
 }
+
+.link {
+    color: red;
+    font-size: 20px;
+    text-decoration: underline;
+    font-family: 'Poppins', sans-serif;
+}
